# INF2004_P7_T74

./: CMakeLists.txt  README.md  README.txt  common.h  main_lib.h
INF2004-T74-P7/: CMakeLists.txt  main.c
INF2004-T74-P7/util/: CMakeLists.txt
INF2004-T74-P7/util/magnometer/: magnetometer.c  magnetometer.h
INF2004-T74-P7/util/motor_controller/: motor_controller.h
INF2004-T74-P7/util/pid_controller/: pid_controller.h
INF2004-T74-P7/util/wifi/: wifi.c
driver/: CMakeLists.txt
driver/barcode/: CMakeLists.txt  barcode.h
driver/irline/: CMakeLists.txt  irline.c
driver/magnometer/: magnometer.c
driver/motor_encoder_barcode/: code39_barcode.h  motor_encoder_barcode.c  motor_setup.h
driver/ultrasonic/: CMakeLists.txt  ultrasonic.c
driver/wifi/: CMakeLists.txt
irline/: CMakeLists.txt  irline.c
magnometer/: magnometer.c
util/magnometer/: CMakeLists.txt
util/motor_controller/: CMakeLists.txt  motor_controller.c
util/pid_controller/: pid_controller.c
util/ultrasonic/: ultrasonic.c  ultrasonic.h
util/wheel_encoder/: wheel_encoder.c  wheel_encoder.h
util/wifi/: lwipopts.h  wifi.h
